--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,3 +95,16 @@ html {
     color: #3b82f6;
   }
 
+  #sendBtnLoader {
+  border: 3px solid white;
+  border-top: 3px solid transparent;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 0.6s linear infinite;
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
