--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,13 @@
 
+.aviso{
+      background-color: #1e293b;
+      color: #000;
+      padding: 15px;
+      text-align: center;
+      font-weight: bold;
+      border-bottom: 2px solid #60a5fa;
+}
+
 /* Fundo gradiente escuro com toque tecnológico */
 body.gradient-bg {
     background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
