--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,20 @@
+
+
 .aviso{
-      background-color: #1e293b;
-      color: #000;
-      padding: 15px;
-      text-align: center;
-      font-weight: bold;
-      border-bottom: 2px solid #60a5fa;
+    display: none;
+  opacity: 0;
+  background-color: #ffcc00;
+  padding: 10px 20px;
+  text-align: center;
+  border-radius: 8px;
+  font-weight: bold;
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+      
 }
 
 /* Fundo gradiente escuro com toque tecnológico */
