--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,10 +42,20 @@ body.gradient-bg {
     width: max-content;
 }
 
+
 @keyframes typing {
     from { width: 0 }
     to { width: 100% }
 }
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.animate-spin-slow {
+  animation: spin 5s linear infinite;
+}
+
 @keyframes blink-caret {
     from, to { border-color: transparent }
     50% { border-color: #60a5fa }
